Fix nether generation being really slow (Closes #5)